src/objects/LG_PortingNumber__c.object
<CustomObject>
    <fields>
        <fullName>LG_ContractType__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CustomerName__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CustomerNumber__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DirectoryListingName__c</fullName>
        <description>Stores the Directory Listing Phone Number Name</description>
        <label>Directory Listing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FirstPhoneNumber__c</fullName>
        <label>First Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InDirectory__c</fullName>
        <label>In Directory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_LastPhoneNumber__c</fullName>
        <label>Last Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Porting Numbers</relationshipLabel>
        <relationshipName>Porting_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PortingDate__c</fullName>
        <label>Porting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_PrimaryNumber__c</fullName>
        <label>Primary Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductConfiguration__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Porting Numbers</relationshipLabel>
        <relationshipName>Porting_Numbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LG_SIMcardnumber__c</fullName>
        <label>SIM card number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Tariff__c</fullName>
        <label>Tariff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SB Telephony</fullName>
                </value>
                <value>
                    <fullName>SOHO Telephony</fullName>
                </value>
                <value>
                    <fullName>Mobile Telephony</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Porting Number</label>
    <nameField>
        <displayFormat>PN-{000000}</displayFormat>
        <label>Porting Numbers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Porting Numbers</pluralLabel>
    <recordTypes>
        <fullName>LG_New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>LG_PortIn</fullName>
        <active>true</active>
        <label>Port In</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>